##########################
# Setup.py Configuration #
##########################
[metadata]
name = clusterama
version = 0.0.1-dev
description = Clustering functionality on top of RDKit.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
    # rdkit-pypi
    tqdm
    pandas
    click
    mols2grid

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src
